--- a/views/index.phtml
+++ b/views/index.phtml
@@ -1,15 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-    <?php $this->getPartial('head') ?>
-    <body>
-        <header>
-            <?php echo $this->getPartial('header') ?>
-        </header>
-        <div id="wrapper">
-            <?php echo $this->getPartial('body') ?>
-        </div>
-        <footer>
-            <?php echo $this->getPartial('footer') ?>
-        </footer>
-    </body>
-</html>
+<h1>Home Page</h1>
+<p>Welcome to the home page</p>
