Refactor views and controllers so they render properly

--- a/views/index.phtml
+++ b/views/index.phtml
@@ -1,2 +1,2 @@
-<h1>Home Page</h1>
-<p>Welcome to the home page</p>
+<h1>You have successfully installed Mini-MVC.</h1>
+<p>This is just a placeholder file.</p>
