--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -5,9 +5,9 @@
         <header>
             <?php echo $this->getPartial('header') ?>
         </header>
-        <div id="wrapper">
-            <?php echo $this->getPartial('body') ?>
-        </div>
+        <section id="wrapper">
+            <?php echo $this->getPartial('content') ?>
+        </section>
         <footer>
             <?php echo $this->getPartial('footer') ?>
         </footer>
