--- a/views/404.phtml
+++ b/views/404.phtml
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Not Found</title>
-    <link rel="stylesheet" href="<?php echo $home_url ?>public/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="<?php echo $home_url ?>public/css/bootstrap-theme.min.css" />
-    <link rel="stylesheet" href="<?php echo $home_url ?>public/css/styles.css" />
-    <script type="text/javascript" src="<?php echo $home_url ?>public/js/jquery-1.12.2.min.js"></script>
-    <script type="text/javascript" src="<?php echo $home_url ?>public/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <div id="wrapper">
-      <header class="page-header">
-        <h1>The page you are looking for could not be found.</h1>
-      </header>
-      <h5>Cick <a href="<?php echo $home_url ?>">here</a> to get back to the home page</h5>
-    </div>
-  </body>
+    <?php echo $this->getPartial('head') ?>
+    <body>
+        <header class="page-header">
+            <h1>The page you are looking for could not be found.</h1>
+        </header>
+        <section id="wrapper">
+            <h5>Click <a href="<?php echo $this->getUrl() ?>">here</a> to get back to the home page</h5>
+        </section>
+        <footer>
+            <?php echo $this->getPartial('footer') ?>
+        </footer>
+    </body>
 </html>
